tests/ui/structs/struct-missing-comma.stderr
error: expected `,`, or `}`, found keyword `pub`
  --> $DIR/struct-missing-comma.rs:5:17
   |
LL |     pub foo: u32
   |                 ^
   |
help: try adding a comma
   |
LL |     pub foo: u32,
   |                 +

error: aborting due to 1 previous error

